grammar.js
    source_file: ($) => repeat($._top_item),

    _top_item: ($) => choice($.start_marker, $.end_marker, $._macro_body),

    start_marker: ($) => seq(start_kw, /59/, optional(hnext_kw)),

    end_marker: ($) => seq(optional($.jump_to), end_kw),

    _eol: ($) => /\r?\n/,
    esc_statement: ($) => esc_kw,

    expression: ($) =>
      choice(
        $.definition,
        $.echo,
        $.wait,
        $.warte,
        $.guidance_noarg,
        $.menu,
        $.logic_operation,
        $.function,
        $.string_function,
        $.system_function,
      ),

    wait: ($) =>
      seq(
        $.wait_kw,
        choice(
          $.num_variable,
          $.char_variable,
          token(prec(PREC.echo, /[^\n\r]+/)),
        ),
      ),

    wait_kw: ($) => wait_kw,

    definition: ($) =>
      choice($.num_definition, $.char_definition, $.assignment),

    num_definition: ($) =>
      seq($.num_variable, choice(...assignment_operator), $.arithmetic),

    char_definition: ($) =>
      seq(
        $.char_variable,
        choice(...assignment_operator),
        choice($.free_text, $.char_literal, $.char_value),
      ),

    free_text: ($) => token(prec(PREC.general, /[^\n\r]+/)),

    assignment: ($) =>
      choice(
        seq($.vai_kw, $.num_variable, optional(/.*/)),
        seq(
          $.var_kw,
          choice(
            $.num_variable,
            $.char_variable,
            $.point_literal,
            $.line_literal,
          ),
          optional(/.*/),
        ),
        seq(
          $.pfd_kw,
          choice($.char_variable, $.path_indicator, $.file_extension),
        ),
        seq($.del_kw, choice($.char_variable, $.num_variable)),
      ),

    vai_kw: ($) => vai_kw,
    var_kw: ($) => var_kw,
    pfd_kw: ($) => pfd,
    del_kw: ($) => del,

    special2Dvariable: ($) =>
      token(prec(PREC.general, choice(...special2Dvariables))),

    arithmetic: ($) =>
      choice(
        $.binary_operator,
        $.unary_operator,
        $.parenthesized_expression,
        $.arithmetic_function,
        $.special2Dvariable,
        $.num_value,
        $.num_variable,
        $.num_sys_var,
        $.val_function,
        $.len_function,
        $.idx_function,
        $.asc_function,
        $.general_variable,
      ),

    unary_operator: ($) =>
      prec.right(
        PREC.power,
        seq(field("operator", "-"), field("operand", $.arithmetic)),
      ),

    arithmetic_func: ($) =>
      token(prec(PREC.keyword, choice(...arithmetic_functions))),

    arithmetic_function: ($) =>
      prec(PREC.arithmetic, seq($.arithmetic_func, "(", $.arithmetic, ")")),

    // String functions that return int
    val_function: ($) =>
      seq(
        val_kw,
        "(",
        choice($.char_variable, $.char_sys_var, $.quoted_char),
        ")",
      ),

    // LEN takes a string and returns a int, special case
    len_function: ($) =>
      seq(
        len,
        "(",
        choice($.char_variable, $.char_sys_var, $.quoted_char, $.concat_char),
        ")",
      ),

    // ASC takes a string, returns int
    num_variable: ($) => seq($.num_var_sign, $.num_var_name),

    num_var_sign: ($) => /%/,

    num_var_name: ($) => token(/([A-Z]|[a-z])([A-Z]|[a-z]|[0-9]|_){0,29}/),

    general_variable: ($) =>
      token(prec(PREC.general, /([A-Z]|[a-z])([A-Z]|[a-z]|[0-9]|_){0,29}/)),

    num_value: ($) => choice($.real, $.int),

    real: ($) => /[+-]?([0-9]*[.])?[0-9]+/,

    char_variable: ($) =>
      prec.right(
        PREC.char,
        seq($.char_var_sign, $.identifier, optional($.char_operand)),
      ),

    char_var_sign: ($) => "$",

    identifier: ($) => token(/[A-Za-z][A-Za-z0-9_-]*/),

    quoted_char: ($) =>
      seq('"', optional($._quoted_char_content), token.immediate('"')),

    _quoted_char_content: ($) => token.immediate(/[^"\n\r]+/),

    binary_operator: ($) => {
      const arithmetic_operators = [
        [prec.left, "+", PREC.plus],
        [prec.left, "-", PREC.plus],
        [prec.left, "/", PREC.times],
        [prec.left, "*", PREC.times],
        [prec.left, "^", PREC.power],
      ];

      return choice(
        ...arithmetic_operators.map(([fn, operator, precedence]) =>
          fn(
            precedence,
            seq(
              field("left", $.arithmetic),
              field("operator", operator),
              field("right", $.arithmetic),
            ),
          ),
        ),
      );
    },

    parenthesized_expression: ($) =>
      prec(PREC.parenthesized, seq("(", $.arithmetic, ")")),

    num_sys_var: ($) => /@([A-Z]|[a-z]|[0-9]){1,3}/,

    char_sys_var: ($) => /\$@([A-Z]|[a-z]|[0-9]){1,3}/,

    if_kw: ($) => if_kw,
    then_kw: ($) => then_kw,
    else_kw: ($) => else_kw,
    ifend_kw: ($) => ifend_kw,

    condition: ($) =>
      prec(
        PREC.flow,
        choice(
          // Inline IF: IF <cond> GOTO <label>
          seq(
            $.if_kw,
            $.logical_expression,
            prec(PREC.jump, $.jump),
            optional($._eol),
          ),

          // Block IF: IF <cond> THEN ... IFEND
          seq($.if_kw, $.logical_expression, $.then_kw, $.condition_alt),
        ),
      ),

    condition_alt: ($) =>
      choice(
        seq(optional($.condition_block), $.ifend_kw),
        $.condition_alt_case,
      ),

    condition_alt_case: ($) =>
      seq(
        optional($.condition_block),
        $.else_kw,
        optional($.condition_block),
        $.ifend_kw,
      ),

    condition_block: ($) =>
      repeat1(
        choice(
          prec(PREC.parenthesized, $.parenthesis),
          $.expression,
          $.condition,
          $.loop,
          $.input,
          $.jump,
          $.jump_to,
          $.file_operation,
        ),
      ),

    negation: ($) => not_kw,

    logical_expression: ($) =>
      prec.left(
        seq(
          optional($.negation),
          $.comparison,
          repeat(seq($.logical_op, $.comparison)),
        ),
      ),

    logical_var: ($) => choice(...logical_variable),

    flow_args: ($) => choice(...flow_arguments),

    comparison: ($) =>
      prec(
        PREC.flow,
        choice($.num_comparison, $.char_comparison, $.logical_var, $.flow_args),
      ),

    logical_op: ($) => choice(...logical_operators),

    num_comparison: ($) =>
      prec(
        PREC.arithmetic,
        seq($.arithmetic, $.comparative_operator, $.arithmetic),
      ),

    char_comparison: ($) =>
      prec(
        PREC.char,
        seq($.char_expression, $.comparative_operator, $.char_expression),
      ),

    char_expression: ($) =>
      choice(
        $.char_variable,
        $.char_sys_var,
        $.quoted_char,
        $.concat_char,
        $.string_function,
      ),

    comparative_operator: ($) => choice(...comparative_operators),

    // Conservative OPTION handling:
    // OPTION is treated as a simple command, not an implicit block.
    menu: ($) =>
      prec(
        PREC.menu,
        seq($.option_kw, choice(seq($.menu_index, $.menu_code), esc_kw)),
      ),

    option_kw: ($) => option_kw,

    menu_index: ($) => /([1-9]|[12][0-9]|3[0])/,

    menu_code: ($) => /[0-9]{1,3}/,

    input: ($) => choice($.scal_input, $.point, $.distance, $.angle),

    path_indicator: ($) => /([A-Z]|[0-9]|#):/,

    file_extension: ($) => /&:\.SZA/,

    jump: ($) => seq($.goto_kw, $.label),
    goto_kw: ($) => goto_kw,

    label: ($) => /[0-9]{1,6}/,

    jump_to: ($) => seq($.label, ":"),

    point_kw: ($) => point_kw,
    point: ($) =>
      prec.right(
        seq(
          $.point_kw,
          choice(
            $.point_opt_option,
            $.point_2p_option,
            $.point_a_option,
            $.point_reference,
          ),
        ),
      ),

    // Arguments are optional, but not more than two
    point_opt_option: ($) =>
      prec.right(
        PREC.keyword,
        choice(
          seq(
            $.point_opt_argument_indicator,
            $._point_sep,
            $.point_argument,
            $._point_sep,
            $.point_argument,
          ),
          seq($.point_opt_argument_indicator, $._point_sep, $.point_argument),
          $.point_opt_argument_indicator,
        ),
      ),

    point_opt_argument_indicator: ($) => token(prec(PREC.keyword, /[RNL]/)),

    // Must have 2 or 3 args
    _point_sep: ($) => token.immediate(/[ \t]+/),

    point_reference: ($) =>
      choice(
        $.point_ar_reference,
        $.point_number,
        $.point_literal,
        $.line_literal,
        $.point_lit_ind,
      ),

    point_argument: ($) =>
      choice($.point_literal, $.line_literal, $.point_arithmetic),

    point_arithmetic: ($) =>
      choice(
        $.point_binary_operator,
        $.point_unary_operator,
        $.point_parenthesized_expression,
        $.point_num_value,
        $.num_variable,
        $.num_sys_var,
        $.special2Dvariable,
        $.point_identifier,
        $.arithmetic_function,
        $.val_function,
        $.len_function,
        $.idx_function,
        $.asc_function,
      ),

    point_num_value: ($) => choice($.point_real, $.point_int),
    point_int: ($) => token(prec(PREC.general, /[0-9]+/)),
    point_number: ($) => token(prec(PREC.keyword, /[0-9]{1,6}/)),
    point_literal: ($) => /P[0-9]/,
    line_literal: ($) => /L[0-9]/,

    comment: ($) => token(prec(PREC.comment, /REM.*/i)),
