test/corpus/arithmetics.txt
================================================================================
Arithmetics
================================================================================

START 59

REM Simple addition
%VAR:=ANZ1+ANZ2
$VAR3:="1:"+$ANZ1

REM Simple subtraction
%VAR:=ANZ1-ANZ2
$VAR3:="1:"+$ANZ1

REM Simple multiplication
%VAR:=ANZ1*ANZ2

REM Simple division
%VAR:=ANZ1/ANZ2
%VAR:=ANZ1/ANZ2

REM Exponential
%VAR:=ANZ1^2

REM Nested function with leading negative
%V1:=-V*(COS(BW1))

REM Calculating with a special variable
%DIHC:=Z3-5
%DIHC:=Z3-FOO

END

--------------------------------------------------------------------------------

(source_file
  (start_marker
    (start_menu_index))
  (comment)
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (binary_operator
            (arithmetic
              (general_variable))
            (arithmetic
              (general_variable)))))))
  (expression
    (definition
      (char_definition
        (char_variable
          (char_var_sign)
          (identifier))
        (free_text))))
  (comment)
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (binary_operator
            (arithmetic
              (general_variable))
            (arithmetic
              (general_variable)))))))
  (expression
    (definition
      (char_definition
        (char_variable
          (char_var_sign)
          (identifier))
        (free_text))))
  (comment)
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (binary_operator
            (arithmetic
              (general_variable))
            (arithmetic
              (general_variable)))))))
  (comment)
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (binary_operator
            (arithmetic
              (general_variable))
            (arithmetic
              (general_variable)))))))
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (binary_operator
            (arithmetic
              (general_variable))
            (arithmetic
              (general_variable)))))))
  (comment)
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (binary_operator
            (arithmetic
              (general_variable))
            (arithmetic
              (num_value
                (real))))))))
  (comment)
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (binary_operator
            (arithmetic
              (unary_operator
                (arithmetic
                  (general_variable))))
            (arithmetic
              (parenthesized_expression
                (arithmetic
                  (arithmetic_function
                    (arithmetic_func)
                    (arithmetic
                      (general_variable)))))))))))
  (comment)
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (binary_operator
            (arithmetic
              (special2Dvariable))
            (arithmetic
              (num_value
                (real))))))))
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (binary_operator
            (arithmetic
              (special2Dvariable))
            (arithmetic
              (general_variable)))))))
  (end_marker))
