test/corpus/assignments.txt
================================================================================
Return assignment
================================================================================

START 59

REM Only integervariables as input
%FOO:=5
VAI %FOO

REM VAR takes %, $, POINT, LINE
VAR %FOO

REM Point assignment to untyped variable
$FOOO:=Test

VAR P0 1.Punkt eingeben
VAR L0 Linie eingeben

REM HiCAD-Path as argument
PFD C:
$AB:=$@9

PFD &:.SZA
$BA:=$@09

REM Delete takes any variable argument
DEL $AB
DEL %BA

REM String length function
%LEN_ATYP2:=LEN($ATYP_2)

END

--------------------------------------------------------------------------------

(source_file
  (start_marker
    (start_menu_index))
  (comment)
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (num_value
            (real))))))
  (expression
    (definition
      (assignment
        (vai_kw)
        (num_variable
          (num_var_sign)
          (num_var_name)))))
  (comment)
  (expression
    (definition
      (assignment
        (var_kw)
        (num_variable
          (num_var_sign)
          (num_var_name)))))
  (comment)
  (expression
    (definition
      (char_definition
        (char_variable
          (char_var_sign)
          (identifier))
        (free_text))))
  (expression
    (definition
      (assignment
        (var_kw)
        (point_literal))))
  (expression
    (definition
      (assignment
        (var_kw)
        (line_literal))))
  (comment)
  (expression
    (definition
      (assignment
        (pfd_kw)
        (path_indicator))))
  (expression
    (definition
      (char_definition
        (char_variable
          (char_var_sign)
          (identifier))
        (free_text))))
  (expression
    (definition
      (assignment
        (pfd_kw)
        (file_extension))))
  (expression
    (definition
      (char_definition
        (char_variable
          (char_var_sign)
          (identifier))
        (free_text))))
  (comment)
  (expression
    (definition
      (assignment
        (del_kw)
        (char_variable
          (char_var_sign)
          (identifier)))))
  (expression
    (definition
      (assignment
        (del_kw)
        (num_variable
          (num_var_sign)
          (num_var_name)))))
  (comment)
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (len_function
            (char_variable
              (char_var_sign)
              (identifier)))))))
  (end_marker))
