test/corpus/comments.txt
================================================================================
Return comments
================================================================================

REM Hello

START 59

REM****hi*
  REM comment

END

REM Finally


--------------------------------------------------------------------------------

(source_file
  (comment)
  (start_marker
    (start_menu_index))
  (comment)
  (comment)
  (end_marker)
  (comment))
