test/corpus/conditions.txt
================================================================================
Return conditions
================================================================================

START   59

REM string compare
IF $FOO = "foo" THEN
    REM Test
    %XY:=42
IFEND

REM num compare nested not
IF FOO <= 84 THEN
    REM Test
    %YX:=23
   IF NOT WAHR THEN
      %YX:=23
      REM Test
   IFEND
IFEND

REM bool compare nested char compare
IF WAHR THEN
   WAIT Test
  IF $FOO <> "Test" THEN
     WAIT Test
  ELSE
     WAIT More
  IFEND
IFEND

REM sys compare
IF @23=5 THEN
    WAIT 3
IFEND

REM sys char compare
IF $@A3="test" THEN
    WAIT 3
IFEND

REM combine
IF $X="test" AND %Y>0 THEN
    WAIT 3
IFEND

REM arithmetic
IF 5+5=10 THEN
    WAIT 5
IFEND

REM Num comparison
IF SP=1 THEN
 WAIT 6
IFEND

IF ESC OR INT GOTO 99
IF %ABR=1 GOTO 99

REM Menu interrupted by condition
OPTION   1  25
  POINT   R
  POINT   N
  POINT   N 202
  POINT   L
  POINT   M
  POINT   M2
  IF $BHF="A1" OR $BHF="B1" THEN
    POINT   162
  ELSE
    POINT   162
  IFEND
ESC

REM String comparison
IF $ENTRI="foo bar" THEN
  %FOO:=1
IFEND

END

--------------------------------------------------------------------------------

(source_file
  (start_marker)
  (comment)
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (char_comparison
          (char_expression
            (char_variable
              (char_var_sign)
              (identifier)))
          (comparative_operator)
          (char_expression
            (quoted_char)))))
    (then_kw)
    (comment)
    (condition_alt
      (condition_block
        (expression
          (definition
            (num_definition
              (num_variable
                (num_var_sign)
                (num_var_name))
              (arithmetic
                (num_value
                  (real)))))))
      (ifend_kw)))
  (comment)
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (num_comparison
          (arithmetic
            (general_variable))
          (comparative_operator)
          (arithmetic
            (num_value
              (real))))))
    (then_kw)
    (comment)
    (condition_alt
      (condition_block
        (expression
          (definition
            (num_definition
              (num_variable
                (num_var_sign)
                (num_var_name))
              (arithmetic
                (num_value
                  (real))))))
        (condition
          (if_kw)
          (logical_expression
            (negation)
            (comparison
              (logical_var)))
          (then_kw)
          (condition_alt
            (condition_block
              (expression
                (definition
                  (num_definition
                    (num_variable
                      (num_var_sign)
                      (num_var_name))
                    (arithmetic
                      (num_value
                        (real)))))))
            (comment)
            (ifend_kw))))
      (ifend_kw)))
  (comment)
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (logical_var)))
    (then_kw)
    (condition_alt
      (condition_block
        (expression
          (wait
            (wait_kw)))
        (condition
          (if_kw)
          (logical_expression
            (comparison
              (char_comparison
                (char_expression
                  (char_variable
                    (char_var_sign)
                    (identifier)))
                (comparative_operator)
                (char_expression
                  (quoted_char)))))
          (then_kw)
          (condition_alt
            (condition_alt_case
              (condition_block
                (expression
                  (wait
                    (wait_kw))))
              (else_kw)
              (condition_block
                (expression
                  (wait
                    (wait_kw))))
              (ifend_kw)))))
      (ifend_kw)))
  (comment)
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (num_comparison
          (arithmetic
            (num_sys_var))
          (comparative_operator)
          (arithmetic
            (num_value
              (real))))))
    (then_kw)
    (condition_alt
      (condition_block
        (expression
          (wait
            (wait_kw))))
      (ifend_kw)))
  (comment)
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (char_comparison
          (char_expression
            (char_sys_var))
          (comparative_operator)
          (char_expression
            (quoted_char)))))
    (then_kw)
    (condition_alt
      (condition_block
        (expression
          (wait
            (wait_kw))))
      (ifend_kw)))
  (comment)
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (char_comparison
          (char_expression
            (char_variable
              (char_var_sign)
              (identifier)))
          (comparative_operator)
          (char_expression
            (quoted_char))))
      (logical_op)
      (comparison
        (num_comparison
          (arithmetic
            (num_variable
              (num_var_sign)
              (num_var_name)))
          (comparative_operator)
          (arithmetic
            (num_value
              (real))))))
    (then_kw)
    (condition_alt
      (condition_block
        (expression
          (wait
            (wait_kw))))
      (ifend_kw)))
  (comment)
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (num_comparison
          (arithmetic
            (binary_operator
              (arithmetic
                (num_value
                  (real)))
              (arithmetic
                (num_value
                  (real)))))
          (comparative_operator)
          (arithmetic
            (num_value
              (real))))))
    (then_kw)
    (condition_alt
      (condition_block
        (expression
          (wait
            (wait_kw))))
      (ifend_kw)))
  (comment)
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (num_comparison
          (arithmetic
            (general_variable))
          (comparative_operator)
          (arithmetic
            (num_value
              (real))))))
    (then_kw)
    (condition_alt
      (condition_block
        (expression
          (wait
            (wait_kw))))
      (ifend_kw)))
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (flow_args))
      (logical_op)
      (comparison
        (logical_var)))
    (jump
      (goto_kw)
      (label)))
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (num_comparison
          (arithmetic
            (num_variable
              (num_var_sign)
              (num_var_name)))
          (comparative_operator)
          (arithmetic
            (num_value
              (real))))))
    (jump
      (goto_kw)
      (label)))
  (comment)
  (expression
    (menu
      (option_kw)
      (menu_index)
      (menu_code)))
  (input
    (point
      (point_kw)
      (point_opt_option
        (point_opt_argument_indicator))))
  (input
    (point
      (point_kw)
      (point_opt_option
        (point_opt_argument_indicator))))
  (input
    (point
      (point_kw)
      (point_opt_option
        (point_opt_argument_indicator)
        (point_argument
          (point_arithmetic
            (point_num_value
              (point_int)))))))
  (input
    (point
      (point_kw)
      (point_opt_option
        (point_opt_argument_indicator))))
  (input
    (point
      (point_kw)
      (point_opt_option
        (point_opt_argument_indicator))))
  (input
    (point
      (point_kw)
      (point_reference
        (point_m_reference))))
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (char_comparison
          (char_expression
            (char_variable
              (char_var_sign)
              (identifier)))
          (comparative_operator)
          (char_expression
            (quoted_char))))
      (logical_op)
      (comparison
        (char_comparison
          (char_expression
            (char_variable
              (char_var_sign)
              (identifier)))
          (comparative_operator)
          (char_expression
            (quoted_char)))))
    (then_kw)
    (condition_alt
      (condition_alt_case
        (condition_block
          (input
            (point
              (point_kw)
              (point_reference
                (point_number)))))
        (else_kw)
        (condition_block
          (input
            (point
              (point_kw)
              (point_reference
                (point_number)))))
        (ifend_kw))))
  (esc_statement)
  (comment)
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (char_comparison
          (char_expression
            (char_variable
              (char_var_sign)
              (identifier)))
          (comparative_operator)
          (char_expression
            (quoted_char)))))
    (then_kw)
    (condition_alt
      (condition_block
        (expression
          (definition
            (num_definition
              (num_variable
                (num_var_sign)
                (num_var_name))
              (arithmetic
                (num_value
                  (real)))))))
      (ifend_kw)))
  (end_marker))
