test/corpus/definitions.txt
================================================================================
Return definitions
================================================================================

START 59

$CHARVARIABLE:=Hello

$alllowercase:=foo?

$Char_Var:=Hello World!

$Allow-inVar:=0

$Char_Va42r:=Hello Wo3ld! of beautiful.

REM When concatenating, there can only be variable after string, or variable+variable,
REM but not variable + string
$Foo:="test" + $FOO2

$Foo:=$Foo(1:5)
$Foo:=$Foo(%Foo:23)

%NUMVARIABLE:=42

%Num_variable:=84

%Var_with_n3mber:=100

%Foo:=5+5

%Foo:=ABS(5)

%Bla:=SIN(4/3)

REM Var starting with minus
%Foo:=-42

REM *** Absolut-Pfad ermitteln ***
PFD $ZAPF
$PFAD:=$@9

REM VAL turns char to num if possible, so this is valid
%FN:=VAL($FR1)

END

--------------------------------------------------------------------------------

(source_file
  (start_marker
    (start_menu_index))
  (expression
    (definition
      (char_definition
        (char_variable
          (char_var_sign)
          (identifier))
        (free_text))))
  (expression
    (definition
      (char_definition
        (char_variable
          (char_var_sign)
          (identifier))
        (free_text))))
  (expression
    (definition
      (char_definition
        (char_variable
          (char_var_sign)
          (identifier))
        (free_text))))
  (expression
    (definition
      (char_definition
        (char_variable
          (char_var_sign)
          (identifier))
        (free_text))))
  (expression
    (definition
      (char_definition
        (char_variable
          (char_var_sign)
          (identifier))
        (free_text))))
  (comment)
  (comment)
  (expression
    (definition
      (char_definition
        (char_variable
          (char_var_sign)
          (identifier))
        (free_text))))
  (expression
    (definition
      (char_definition
        (char_variable
          (char_var_sign)
          (identifier))
        (free_text))))
  (expression
    (definition
      (char_definition
        (char_variable
          (char_var_sign)
          (identifier))
        (free_text))))
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (num_value
            (real))))))
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (num_value
            (real))))))
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (num_value
            (real))))))
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (binary_operator
            (arithmetic
              (num_value
                (real)))
            (arithmetic
              (num_value
                (real))))))))
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (arithmetic_function
            (arithmetic_func)
            (arithmetic
              (num_value
                (real))))))))
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (arithmetic_function
            (arithmetic_func)
            (arithmetic
              (binary_operator
                (arithmetic
                  (num_value
                    (real)))
                (arithmetic
                  (num_value
                    (real))))))))))
  (comment)
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (num_value
            (real))))))
  (comment)
  (expression
    (definition
      (assignment
        (pfd_kw)
        (char_variable
          (char_var_sign)
          (identifier)))))
  (expression
    (definition
      (char_definition
        (char_variable
          (char_var_sign)
          (identifier))
        (free_text))))
  (comment)
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (val_function
            (char_variable
              (char_var_sign)
              (identifier)))))))
  (end_marker))
