test/corpus/jumps.txt
================================================================================
Return jumps
================================================================================

REM jumps

START   59

IF WAHR GOTO 10

IF NOT WAHR THEN
  GOTO 223
IFEND

%FOO:=42

IF %FOO=42 THEN
  WAIT test
ELSE
  GOTO 3456
IFEND

10: WAIT long

223: %SOMEVAR:=42

3456: WAIT Test

END

--------------------------------------------------------------------------------

(source_file
  (comment)
  (start_marker
    (start_menu_index))
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (logical_var)))
    (jump
      (goto_kw)
      (label)))
  (condition
    (if_kw)
    (logical_expression
      (negation)
      (comparison
        (logical_var)))
    (then_kw)
    (condition_alt
      (condition_block
        (jump
          (goto_kw)
          (label)))
      (ifend_kw)))
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (num_value
            (real))))))
  (condition
    (if_kw)
    (logical_expression
      (comparison
        (num_comparison
          (arithmetic
            (num_variable
              (num_var_sign)
              (num_var_name)))
          (comparative_operator)
          (arithmetic
            (num_value
              (real))))))
    (then_kw)
    (condition_alt
      (condition_alt_case
        (condition_block
          (expression
            (wait
              (wait_kw))))
        (else_kw)
        (condition_block
          (jump
            (goto_kw)
            (label)))
        (ifend_kw))))
  (jump_to
    (label))
  (expression
    (wait
      (wait_kw)))
  (jump_to
    (label))
  (expression
    (definition
      (num_definition
        (num_variable
          (num_var_sign)
          (num_var_name))
        (arithmetic
          (num_value
            (real))))))
  (jump_to
    (label))
  (expression
    (wait
      (wait_kw)))
  (end_marker))
